<resources>
    <string name="app_name">mydata</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">로그인이 필요합니다.</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">로그인</string>
    <string name="menu_join">회원가입</string>
    <string name="menu_home">홈</string>
    <string name="menu_benefit">혜택</string>
    <string name="menu_map">내위치 / 주변 매장</string>
    <string name="menu_bookmark">자주 찾는 멤버십 앱</string>
    <string name="menu_favBrand">자주 찾는 브랜드</string>
    <string name="menu_favApp">자주 찾는 멤버십 앱</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_setting">환경설정</string>
    <string name="menu_logout">로그아웃</string>

    <string name="api_key">AIzaSyCWaO22jcES8EnIes30k4pHn0DhdTmAWJA</string>
    <string name="init_lat">37.557527</string>
    <string name="init_lng">126.9244669</string>

</resources>