<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/star_big_on"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_benefit"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_benefit" />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_favBrand"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_favBrand" />
        <item
            android:id="@+id/nav_favApp"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/menu_favApp" />
        <item
            android:id="@+id/nav_mypage"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_mypage" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_setting" />
    </group>
</menu>